--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Become A Chief Is Web site teaching you To Be A good Chief"
     />
-    <title>Become A Chief</title>
+    <title>B Chief</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
